# web-scraper

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  scrapetest.py
