[project]
name = "web-scraper"
version = "0.1.0"
description = "learning project"
authors = [
    {name = "Floccinau",email = "argonavt28@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "lxml (>=5.4.0,<6.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
